# ksp-school

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Pipfile  docker-compose.staging.yml  docker-compose.yml  entrypoint.sh  manage.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: build.yml  pre-commit.yml
css/: tailwind.css
docker/: Caddyfile  build.sh  start.sh
school/: __init__.py  asgi.py  bundle.js  context_processors.py  settings.py  storages.py  urls.py  utils.py  wsgi.py
school/classrooms/: admin.py  apps.py  forms.py  models.py  results.py  urls.py  views.py
school/classrooms/migrations/: 0001_initial.py  0002_alter_classroom_options_alter_classroomuser_options_and_more.py  0003_alter_classroomuser_unique_together.py
school/courses/: admin.py  apps.py  models.py  urls.py  views.py
school/courses/migrations/: 0001_initial.py  0002_lessonmaterial_alter_course_slug_alter_lesson_slug_and_more.py  0003_lessonitem_problem.py  0004_alter_coursegroup_options_alter_lesson_options_and_more.py  (+6 more)
school/imports/: apps.py  courses.schema.json  forms.py  urls.py  views.py
school/pages/: admin.py  apps.py  markdown_extensions.py  models.py  views.py
school/problems/: admin.py  apps.py  constants.py  forms.py  models.py  services.py  urls.py  utils.py  views.py
school/static/: .gitignore
school/trackers/: apps.py  helpers.py  models.py  utils.py
school/users/: admin.py  apps.py  auth.py  backends.py  models.py  views.py
(+59 files in other folders)
